# tee-gp-proxy

./: README.en.md  README.md
cc-resource-pooling-livetransfer/demo/clientapp/parallel/: p.sh
cc-resource-pooling-livetransfer/demo/clientapp/testcase6/: testcase.c
cc-resource-pooling-livetransfer/demo/clientapp/testcase7/: testcase.c
cc-resource-pooling-livetransfer/demo/clientapp/testcase8/: testcase.c
cc-resource-pooling-livetransfer/demo/dbusjwt/: CMakeLists.txt
cc-resource-pooling-livetransfer/docs/: test.docx
cc-resource-pooling-livetransfer/teeproxy/gpproxy/: common.cmake
cc-resource-pooling-livetransfer/teeproxy/gpproxy/certs/: gen_client_crt.sh
cc-resource-pooling-livetransfer/teeproxy/gpworker/: condition.c
cc-resource-pooling/container-mig/: README.md  dbuslt.c  dbuslt.h  dbuslt_CMakeLists.txt  gpproxy.cc  gpproxy_gt.proto  gpworker_tzcp_dbus.c  teecc.cc  teecc.h
cc-resource-pooling/container-mig/dbuslt/: README.md
cc-resource-pooling/demo/clientapp/testcase1/: testcase.c
cc-resource-pooling/demo/clientapp/testcase3/: testcase.c
cc-resource-pooling/demo/clientapp/testcase4/: testcase.c
cc-resource-pooling/demo/clientapp/testcase5/: testcase.c  testcase.h
cc-resource-pooling/demo/clientapp/testcase9/: testcase.c
cc-resource-pooling/demo/dbusjwt/: dbusc_jwt.c  dbusc_jwt.h  dbuss_fetchjwt.c  dbuss_validatejwt.c
cc-resource-pooling/demo/libspiffejwt/: spiffejwt.c  spiffejwt.h  test_spiffejwt.c
cc-resource-pooling/demo/scripts/: dbus.sh  tcpdump.sh
cc-resource-pooling/demo/scripts/spire/: createentry_workload.sh  gentoken_agent.sh  runagent.sh  showdelentry.sh
cc-resource-pooling/docs/deployment/: deployment.docx
cc-resource-pooling/patch/: c-spiffe_patch
cc-resource-pooling/teeproxy/gpproxy/: CMakeLists.txt  changelog.md  gpproxy.h
cc-resource-pooling/teeproxy/gpproxy/certs/: ca_crt.pem  ca_key.pem  check_ca_key.sh  check_client_crt.sh  gen_ca_crt.sh  gen_client_keycsr.sh  gen_server_keycrt.sh  server_key.pem
cc-resource-pooling/teeproxy/gpproxy/conf/: gpproxy_config.yaml
cc-resource-pooling/teeproxy/gpworker/: README  condition.h  gpworker.c  threadpool.h  tzcp_dbus.c
cc-resource-pooling/teeproxy/libdbuscgpw/: CMakeLists.txt  dbusc_gpw.c  dbusc_gpw.h
cc-resource-pooling/teeproxy/libteecc/: teecc.cc
cc-resource-pooling/teeproxy/libteecc/certs/: check_ca_crt.sh  client_crt.pem  client_key.pem
cc-resource-pooling/teeproxy/libteecc/include/teecc/: tee_client_constants.h  tee_client_list.h  tee_client_log.h  tee_client_type.h
demo/clientapp/testcase2/: testcase.c
demo/clientapp/testcase5/: CMakeLists.txt
demo/dbusjwt/: dbus_return_code.h
demo/libspiffejwt/: CMakeLists.txt
demo/scripts/spire/: runserver.sh
docs/: test.docx
docs/Design/: design.docx
docs/deployment/: deployment.docx
teeproxy/gpproxy/: gpproxy.cc
teeproxy/gpproxy/certs/: check_server_crt.sh  check_server_key.sh  gen_ca_keycrt.sh  gen_server_crt.sh  msg.txt  server_crt.pem
teeproxy/gpproxy/protos/: gt.proto
teeproxy/gpworker/: threadpool.c  tzcp_dbus.h
teeproxy/libteecc/: CMakeLists.txt  teecc.h
teeproxy/libteecc/certs/: check_client_key.sh
teeproxy/libteecc/conf/: teecc_config.yaml
teeproxy/libteecc/include/teecc/: tee_client_api.h  teec_client_api.h
trustzone-awared-vm/: README.md
trustzone-awared-vm/Host/: itrustee_tzdriver.patch  qemu.patch  tee_tzdriver.patch  tzdriver.patch
trustzone-awared-vm/Host/vtzb_proxy/: Makefile  agent.c  agent.h  comm_structs.h  debug.c  debug.h  process_data.c  process_data.h  serial_port.c  serial_port.h  thread_pool.c  thread_pool.h  tlogcat.c  tlogcat.h  virt.c  virt.h  vm.c  vm.h  vtzb_proxy.c  vtzb_proxy.h
trustzone-awared-vm/Host/vtzb_proxy/include/: tc_ns_client.h  tee_client_constants.h  tee_client_type.h  tee_sys_log.h
trustzone-awared-vm/RemoteAttestation/qca_client_demo/: Makefile  client.c  data.txt
trustzone-awared-vm/RemoteAttestation/qca_guest_demo/: b64.c  b64.h  qca_guest.c
trustzone-awared-vm/RemoteAttestation/qca_guest_demo/cloud/: Makefile
trustzone-awared-vm/RemoteAttestation/qca_host_server_demo/: qca_host_server_demo.c  ra_client_api.h
trustzone-awared-vm/RemoteAttestation/qca_host_server_demo/cloud/: Makefile
trustzone-awared-vm/VM/virtio/char/: Makefile  virtio_console.c
trustzone-awared-vm/VM/virtio/tty/hvc/: hvc_console.c  hvc_console.h
trustzone-awared-vm/VM/vtzdriver/: Makefile  block_pages.c  block_pages.h  comm_structs.h  process_data.c  process_data.h  reserved_shm.c  reserved_shm.h  serialport.c  serialport.h  tee_info.c  tee_info.h  test.c  test.h  tlogger.c  tlogger.h  vtzf.c  vtzf.h
trustzone-awared-vm/VM/vtzdriver/inc/: tc_ns_client.h  tc_ns_log.h  teek_client_constants.h  teek_ns_client.h
trustzone-awared-vm/doc/: deployment.docx
trustzone-awared-vm/docs/: TA虚拟化部署特性测试报告.docx  TA虚拟化部署特性编译构建和部署指导书.docx  TA虚拟化部署特性设计说明书.docx  deployment.docx  test.docx  测试.docx
